--- a/devoir1.tex
+++ b/devoir1.tex
@@ -272,12 +272,29 @@
 	   	   &= \mathcal{O}(13*(1)+9*(log \: n)) \\
 	       &= \mathcal{O}(log \: n)
 	    \end{align*}
-      
-  	
+  	\newpage
     \subsection*{b)}
-      \noindent Nous observons que \textit{fib1} est la fonction dont la temps d'exécution est le plus long et que la fonction \textit{fib3} possède le temps d'exécution le plus court. Cette différence s'explique par le fait que \( \phi^n \geq n \geq log \: n  \; \; \forall n \in \mathbb{R} \)
+      \noindent Nous observons que \textit{fib1} est la fonction dont la temps d'exécution est le plus long et que la fonction \textit{fib3} possède le temps d'exécution le plus court. Cette différence s'explique par le fait que \( \phi^n \geq n \geq log \: n  \; \; \forall n \in \mathbb{R} \)  
     \subsection*{c)}
+	  \subsubsection*{Fonction fib1 :}      
+      \noindent Cette fonction n'utilise pas beaucoup d'espace mémoire puisqu'elle ne fait qu'une comparaison et une addition, cependant le fait qu'elle soit récursive et qu'elle possède un temps d'exécution exponentiel font en sorte qu'elle a besoin de beaucoup plus d'espace mémoire que les 2 autres fonctions. Elle doit garder en mémoire la fonction à chaque fois qu'elle fait appelle à elle-même.
+      \subsubsection*{Fonction fib2 :} 
+      \noindent À première vue, cette fonction utilise moins de ressource que \textit{fib3}. Cependant la boucle de \textit{fib2} va être exécutée beaucoup plus de fois que celle de \textit{fib3} en raison de leur ordre ce qui fait en sorte que \textit{fib2} utilise beaucoup plus de ressource que \textit{fib3}. 
+      \subsubsection*{Fonction fib3 :}
+      \noindent Malgré le fait qu'à première vue, c'est cette fonction qui occupe le plus d'espace mémoire, le fait d'avoir un ordre de \( \mathcal{O}(log \: n) \) l'amène à avoir beaucoup d'excéution ce qui occupe moins de mémoire que les autres.
     \subsection*{d)}
-  \newpage
-
+      \noindent Voici le temps processeur nécessaire pour les valeurs de n suivantes :     
+      \begin{table}[h]
+      	\centering
+        \begin{tabular}{|c|c|c|c|}
+          \hline
+          & \textbf{fib1 (sec)} & \textbf{fib2( sec)} & \textbf{fib3 (sec)} \\ \hline
+          \textbf{n=10}      & 0.000003            & 0.000005            & 0.000016            \\ \hline
+          \textbf{n=100}     & N/A                 & 0.000006            & 0.000017            \\ \hline
+          \textbf{n=1000}    & N/A                 & 0.000014            & 0.000019            \\ \hline
+          \textbf{n=10000}   & N/A                 & 0.000197            & 0.000019            \\ \hline
+          \textbf{n=100000}  & N/A                 & 0.001976            & 0.000020            \\ \hline
+          \textbf{n=1000000} & N/A                 & 0.020925            & 0.000017            \\ \hline
+        \end{tabular}
+      \end{table}
 \end{document}
