--- a/devoir1.tex
+++ b/devoir1.tex
@@ -178,28 +178,34 @@
   	    \noindent \textbf{Ligne 1 :} \( int \: i = 1 \) \newline
         Une affectation en informatique se fait en un temps constant
         \( \mathcal{O}(1) \). \newline
+		\textbf{S'exécute 1 fois.} \newline
 
         \noindent \textbf{Ligne 2 :} \( int \: j = 0 \) \newline
         Une affectation en informatique se fait en un temps constant
         \( \mathcal{O}(1) \). \newline
+		\textbf{S'exécute 1 fois.} \newline
 
         \noindent \textbf{Ligne 3 :}  \( for\: (\:int \: k=1;k<=n;k++) \{ \cdots \} \: \) \newline
         Une boucle \textit{for} de cette forme se fait en temps linéaire 
         \( \mathcal{O}(n) \). \newline
+        \textbf{S'exécute n fois.} \newline
         
         \noindent \textbf{Ligne 4 :} \( j=j+i \) \newline
         Une affectation et une addition en informatique se font en un temps constant, \newline
         cependant le fait qu'elle se trouve dans une boucle \textit{for} la rend linéaire
         \( \mathcal{O}(n) \). \newline
+		\textbf{S'exécute n-1 fois.} \newline
 
         \noindent \textbf{Ligne 5 :} \( i = j-i \) \newline
   	    Une affectation et une addition en informatique se font en un temps constant, \newline
         cependant le fait qu'elle se trouve dans une boucle \textit{for} la rend linéaire
         \( \mathcal{O}(n) \). \newline
+		\textbf{S'exécute n-1 fois.} \newline    
     
         \noindent \textbf{Ligne 6 :} \( return \: j \) \newline
   	    Un retour en informatique se fait en un temps constant
         \( \mathcal{O}(1) \). \newline
+        \textbf{S'exécute 1 fois.} \newline
 
         \noindent Ainsi, il est possible de savoir que : 
 	    \begin{align*}
@@ -208,64 +214,80 @@
 	       &= \mathcal{O}(n)
 	    \end{align*}	    
       
+	  \newpage      
+      
       \subsubsection*{Temps d'exécution de la fonction fib3 dans le pire des cas :}
   	    
   	    \noindent \textbf{Ligne 1 :} \( int \: i = 1 \) \newline
         Une affectation en informatique se fait en un temps constant
         \( \mathcal{O}(1) \). \newline
+        \textbf{S'exécute 1 fois.} \newline
 
         \noindent \textbf{Ligne 2 :} \( int \: j = 0 \) \newline
         Une affectation en informatique se fait en un temps constant
         \( \mathcal{O}(1) \). \newline
+        \textbf{S'exécute 1 fois.} \newline      
         
         \noindent \textbf{Ligne 3 :} \( int \: k = 0 \) \newline
         Une affectation en informatique se fait en un temps constant
         \( \mathcal{O}(1) \). \newline
+ 		\textbf{S'exécute 1 fois.} \newline       
         
         \noindent \textbf{Ligne 4 :} \( int \: h = 1 \) \newline
         Une affectation en informatique se fait en un temps constant
         \( \mathcal{O}(1) \). \newline
+		\textbf{S'exécute 1 fois.} \newline     
         
         \noindent \textbf{Ligne 5 :} \( while \: (n>0) \{ \cdots \} \) \newline
         Dans le pire des cas, n vaudra \( 2^k - 1 \) où \(k \in \mathbb{N} \), donc de cette manière nous         savons qu'il est question d'un logarithmique. 
         \( \mathcal{O}(log \: n) \). \newline
+		\textbf{S'exécute log(n) fois.} \newline
 
         \noindent \textbf{Ligne 6 :}  \( if \: (n\%2)\{ \cdots \} \) \newline
         Une condition se fait en un temps constant, par contre le fait qu'elle se situe dans un \textit{while} fait en sorte que le temps constant va être multiplié par le temps \( \mathcal{O}(log \: n) \) de la boucle. En effet, en étant en pire cas, cette condition se doit d'être vrai en tout temps.
         \( \mathcal{O}(1)*\mathcal{O}(log \: n) \). \newline
-
+		\textbf{S'exécute log(n)-1 fois.} \newline
+		
         \noindent \textbf{Ligne 7 :} \( int \: t = j*h \) \newline
         Une affectation et une addition en informatique se font en un temps constant, cependant le fait qu'elle se trouve dans une boucle \textit{while} fait en sorte qu'elle se multiplie avec le temps d'exécution de cette dernière.
         \( \mathcal{O}(1)*\mathcal{O}(log \: n) \). \newline
+		\textbf{S'exécute log(n)-1 fois.} \newline
 
         \noindent \textbf{Ligne 8 :} \( j = i*h + j*k + t \) \newline
-  	    Une affectation et une addition en informatique se font en un temps constant, cependant le fait qu'elle se trouve dans une boucle \textit{while} fait en sorte qu'elle se multiplie avec le temps d'exécution de cette dernière.
+  	    Une affectation et une addition en informatique se font en un temps constant, cependant le fait qu'elle se trouve dans une boucle \textit{while} fait en sorte qu'elle se multiplie avec le temps d'exécution de cette dernière.   
         \( \mathcal{O}(1)*\mathcal{O}(log \: n) \). \newline
+ 		\textbf{S'exécute log(n)-1 fois.} \newline  
     
         \noindent \textbf{Ligne 9 :} \( i = i*k + t; \) \newline
   	    Une affectation et une addition en informatique se font en un temps constant, cependant le fait qu'elle se trouve dans une boucle \textit{while} fait en sorte qu'elle se multiplie avec le temps d'exécution de cette dernière.
         \( \mathcal{O}(1)*\mathcal{O}(log \: n) \). \newline
+		\textbf{S'exécute log(n)-1 fois.} \newline      
         
         \noindent \textbf{Ligne 10 :} \( int \: t = h*h \) \newline
   	    Une affectation et une addition en informatique se font en un temps constant, cependant le fait qu'elle se trouve dans une boucle \textit{while} fait en sorte qu'elle se multiplie avec le temps d'exécution de cette dernière.
         \( \mathcal{O}(1)*\mathcal{O}(log \: n) \). \newline
+        \textbf{S'exécute log(n)-1 fois.} \newline
         
         \noindent \textbf{Ligne 11 :} \( h = 2*k*h + t \) \newline
   	    Une affectation et une addition en informatique se font en un temps constant, cependant le fait qu'elle se trouve dans une boucle \textit{while} fait en sorte qu'elle se multiplie avec le temps d'exécution de cette dernière.
         \( \mathcal{O}(1)*\mathcal{O}(log \: n) \). \newline
+        \textbf{S'exécute log(n)-1 fois.} \newline
         
         \noindent \textbf{Ligne 12 :} \( k = k*k + t \) \newline
   	    Une affectation et une addition en informatique se font en un temps constant, cependant le fait qu'elle se trouve dans une boucle \textit{while} fait en sorte qu'elle se multiplie avec le temps d'exécution de cette dernière.
         \( \mathcal{O}(1)*\mathcal{O}(log \: n) \). \newline
+        \textbf{S'exécute log(n)-1 fois.} \newline
        
         \noindent \textbf{Ligne 13 :} \( n = n/2 \) \newline
   	    Une affectation et une addition en informatique se font en un temps constant, cependant le fait qu'elle se trouve dans une boucle \textit{while} fait en sorte qu'elle se multiplie avec le temps d'exécution de cette dernière.
         \( \mathcal{O}(1)*\mathcal{O}(log \: n) \). \newline
+        \textbf{S'exécute log(n)-1 fois.} \newline
         
         \noindent \textbf{Ligne 14 :} \( return \: j \) \newline
   	    Un retour en informatique se fait en un temps constant
         \( \mathcal{O}(1) \). \newline
-
+		S'exécute 1 fois. \newline
+		
         \noindent Ainsi, il est possible de savoir que : 
 	    \begin{align*}
 	       T(n) &= 4*(\mathcal{O}(1))+\mathcal{O}(log \: n)+8*( \mathcal{O}(1)*\mathcal{O}(log \: n)) + \mathcal{O}(1) \\
@@ -297,4 +319,6 @@
           \textbf{n=1000000} & N/A                 & 0.020925            & 0.000017            \\ \hline
         \end{tabular}
       \end{table}
+      \newline
+      \textbf{Note :} N/A = Beaucoup trop long.
 \end{document}
