Fix missing package and add reference to online repo

--- a/devoir1.tex
+++ b/devoir1.tex
@@ -4,6 +4,7 @@
 \usepackage{setspace}
 \usepackage[ruled, linesnumbered, french, onelanguage]{algorithm2e}
 \usepackage{amsmath, amsthm, amssymb, amsfonts}
+\usepackage{enumitem}
 \usepackage[utf8]{inputenc}
 
 \title{Devoir 1}
@@ -39,6 +40,11 @@
   \end{titlepage}
 
   \newpage
+
+  \noindent \textit{Note :} Le code source \LaTeX est disponible à l'URL
+  suivant : \\
+
+  https://github.com/Mukki/algo-devoir-1
 
   \newpage
 
