--- a/devoir1.tex
+++ b/devoir1.tex
@@ -41,8 +41,8 @@
 
   \newpage
 
-  \noindent \textit{Note :} Le code source \LaTeX est disponible à l'URL
-  suivant : \\
+  \noindent \textit{Note :} Le code source \LaTeX \:est disponible à l'URL
+  suivant :
 
   https://github.com/Mukki/algo-devoir-1
 
@@ -309,7 +309,7 @@
 		\textbf{S'exécute 1 fois.} \newline
 
         \noindent \textbf{Ligne 5 :} \( while \: (n>0) \{ \cdots \} \) \newline
-        Dans le pire des cas, n vaudra \( 2^k - 1 \) où \(k \in \mathbb{N} \), donc de cette manière nous         savons qu'il est question d'un logarithmique.
+        Dans le pire des cas, n vaudra \( 2^k - 1 \) où \(k \in \mathbb{N} \) afin que le code si situant dans le \textit{if} s'exécute à chaque itération. En raison de la division du n par 2,  donc de cette manière nous savons qu'il est question d'un logarithmique.
         \( \mathcal{O}(log \: n) \). \newline
 		\textbf{S'exécute log(n) fois.} \newline
 
